refactor: Add docker setup documentation